--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/PP POLOS.png" alt="Muhamad Ais Saputera" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/muhamadais.jpg" alt="Muhamad Ais Saputera" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhamad Ais Saputera</h1>
       <p class="lead">Student in SMK Pembangunan Jaya-YAKAPI</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
